--- a/src/app/titulo/titulo.component.css
+++ b/src/app/titulo/titulo.component.css
@@ -1,10 +1,11 @@
 #titulo{
-    background-color: rgb(243, 231, 214);
+    background-color: antiquewhite;
     border-radius: 10px;
     margin-left: 2%;
     margin-right:2% ;
     padding-top: 10px;
     padding-bottom: 10px;
+    margin-bottom: 15px;
     text-align: center;
     text-shadow: 2px 2px 5px black;
     
